--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "reflect-metadata": "^0.1.13",
+    "typedi": "^0.10.0",
     "typescript": "^5.0.2"
   }
 }
