--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "express": "^4.18.2",
     "reflect-metadata": "^0.1.13",
     "typedi": "^0.10.0",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.1"
   }
 }
